--- a/views/admin/projects.jade
+++ b/views/admin/projects.jade
@@ -8,11 +8,14 @@ block content
 
     span.divider
 
+    p(v-if="projects.length === 0") No projects for now.
+
     div.half.project-card(v-repeat="project in projects | filterBy quickfilter in 'title'")
       img(src="http://www.fillmurray.com/100/100")
       section.body
+        i.ti-pencil-alt(v-if="project.published === 'no'")
         p {{project.title}}
         p.date {{project.created_at}}
         ul
-          li: a(href='/admin/projects/update/{{project.id}}'): i.ti-pencil-alt
+          li: a(href='/admin/projects/update/{{project.id}}'): i.ti-pencil
           li(v-on="click: destroyProject(project.id)"): i.ti-trash
