--- a/views/admin/projects.jade
+++ b/views/admin/projects.jade
@@ -17,5 +17,5 @@ block content
         p {{project.title}}
         p.date {{project.created_at}}
         ul
-          li: a(href='/admin/projects/update/{{project.id}}'): i.ti-pencil
+          li: a(href='/admin/projects/edit/{{project.id}}'): i.ti-pencil
           li(v-on="click: destroyProject(project.id)"): i.ti-trash
