--- a/source/admin/sass/base.scss
+++ b/source/admin/sass/base.scss
@@ -20,6 +20,7 @@
 
 @import "partials/sidenav";
 
+@import "pages/login";
 @import "pages/home";
 @import "pages/projects";
 @import "pages/contact";
