Added first draft of the home page.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,11 @@
 doctype html
-htmlremo
+html
   head
     title raphaelp | #{title}
-    link(rel='stylesheet', href='/stylesheets/base.css')
+    link(rel='stylesheet', href='/site/stylesheets/main.css')
   body
     block content
 
-    script(src='/javascripts/main.js')
+    script(src='/site/javascripts/main.js')
 
 
