--- a/source/site/sass/main.scss
+++ b/source/site/sass/main.scss
@@ -2,6 +2,7 @@
 // UTILS
 //----------------------------------------------------------------------------------------------------
 @import "utils/variables";
+@import "utils/fonts";
 
 //----------------------------------------------------------------------------------------------------
 // VENDORS
@@ -11,6 +12,7 @@
 // BASE
 //----------------------------------------------------------------------------------------------------
 @import "base/reset";
+@import "base/typography";
 
 //----------------------------------------------------------------------------------------------------
 // LAYOUT
