--- a/source/site/sass/layout/_sections.scss
+++ b/source/site/sass/layout/_sections.scss
@@ -45,7 +45,7 @@ section
 	box-sizing: border-box;
 	padding: 30px;
 	background-color: #fafafa;
-	border: 1px solid #333;
+	border: 0.5px solid #e0e0e0;
 }
 
 footer
