--- a/source/site/sass/base/_typography.scss
+++ b/source/site/sass/base/_typography.scss
@@ -1,11 +1,21 @@
 
+h1 {
+	font-size: 48px;
+}
+
+h2 {
+	font-size: 36px;
+}
+
 h1, h2, h3 {
+	color: #333;
 	font-family: SourceCode, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 500;
 }
 
-p {
+p, a {
 	margin: 15px 0;
+	color: #333;
 	font-size: 18px;
 	line-height: 24px;
 	letter-spacing: 1px;
