--- a/source/site/sass/main.scss
+++ b/source/site/sass/main.scss
@@ -18,6 +18,10 @@
 // LAYOUT
 //----------------------------------------------------------------------------------------------------
 @import "layout/sections";
+@import "layout/header";
+@import "layout/content";
+@import "layout/slider";
+@import "layout/contact";
 
 //----------------------------------------------------------------------------------------------------
 // COMPONENT
