--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title raphaelp | #{title}
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/site/stylesheets/themify-icons.css')
     link(rel='stylesheet', href='/site/stylesheets/main.css')
   body
     block content
