--- a/source/site/sass/layout/_content.scss
+++ b/source/site/sass/layout/_content.scss
@@ -17,7 +17,7 @@
 	box-sizing: border-box;
 	padding: 30px 0;
 	background-color: #fafafa;
-	border: 0.5px solid #e0e0e0;
+	//border: 1px solid #e0e0e0;
 	max-height: 700px;
 
 
