--- a/source/site/sass/main.scss
+++ b/source/site/sass/main.scss
@@ -12,22 +12,25 @@
 // BASE
 //----------------------------------------------------------------------------------------------------
 @import "base/reset";
+@import "base/general";
 @import "base/typography";
 
 //----------------------------------------------------------------------------------------------------
 // LAYOUT
 //----------------------------------------------------------------------------------------------------
-@import "layout/sections";
 @import "layout/header";
 @import "layout/content";
 @import "layout/slider";
 @import "layout/contact";
+@import "layout/footer";
 
 //----------------------------------------------------------------------------------------------------
 // COMPONENT
 //----------------------------------------------------------------------------------------------------
+@import "components/button";
+@import "components/form";
 
 //----------------------------------------------------------------------------------------------------
 // PAGES
 //----------------------------------------------------------------------------------------------------
-
+@import "pages/home";
