--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,8 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/site/stylesheets/themify-icons.css')
     link(rel='stylesheet', href='/site/stylesheets/main.css')
-  body
+
+  body(class="#{ title.toLowerCase() }")
     block content
 
     script(src='/site/javascripts/main.js')
