--- a/public/site/stylesheets/main.css
+++ b/public/site/stylesheets/main.css
@@ -92,13 +92,25 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body {
+  background-color: #fafafa; }
+
+body, textarea {
+  font-family: SourceSans, "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
 h1 {
   font-size: 48px; }
 
 h2 {
   font-size: 36px; }
 
-h1, h2, h3 {
+h3 {
+  font-size: 24px; }
+
+h4 {
+  font-size: 18px; }
+
+h1, h2, h3, h4 {
   color: #333;
   font-family: SourceCode, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500; }
@@ -115,11 +127,11 @@ p, a {
 strong {
   font-weight: 400; }
 
-footer {
-  clear: both;
-  padding: 50px 0;
-  text-align: center;
-  background-color: #ffaaaa; }
+input {
+  font-size: 12px; }
+
+textarea {
+  font-size: 13px; }
 
 header {
   position: relative;
@@ -169,7 +181,6 @@ h1 {
   box-sizing: border-box;
   padding: 30px 0;
   background-color: #fafafa;
-  border: 0.5px solid #e0e0e0;
   max-height: 700px; }
 
 .card__title,
@@ -228,7 +239,79 @@ p {
     width: 100%; } }
 
 .slider {
-  clear: both; }
+  clear: both;
+  display: block;
+  width: 100%;
+  float: left; }
+
+.slide {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center; }
 
 .contact {
+  padding: 40px 0;
   clear: both; }
+  .contact a {
+    text-decoration: none; }
+  .contact form {
+    padding: 0 10%;
+    margin: 30px 0; }
+
+.email-form, .media {
+  display: inline-block;
+  width: 50%;
+  padding: 30px 60px;
+  vertical-align: top;
+  box-sizing: border-box; }
+
+.media__personnal {
+  margin-bottom: 35px; }
+  .media__personnal a {
+    vertical-align: 4px;
+    font-size: 16px;
+    margin-left: 10px; }
+  .media__personnal p {
+    padding-left: 10%;
+    margin: 30px 0; }
+
+.media__external a {
+  display: inline-block;
+  margin: 30px 0;
+  width: 25%;
+  text-align: center; }
+
+footer {
+  clear: both;
+  padding: 50px 0;
+  text-align: center;
+  background-color: #333; }
+  footer p {
+    color: #444; }
+
+button, .button {
+  padding: 10px 40px;
+  margin-top: 30px;
+  background-color: #e5c100;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 2px;
+  border: none;
+  cursor: pointer; }
+
+.form__group {
+  margin-top: 30px; }
+  .form__group label {
+    display: block;
+    margin-bottom: 15px;
+    font-size: 14px; }
+  .form__group input, .form__group textarea {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #e0e0e0; }
+    .form__group input:focus, .form__group textarea:focus {
+      box-shadow: 0 0 5px 0 #bfbfbf; }
+
+.home h3 {
+  text-align: center; }
