--- a/source/site/sass/base/_typography.scss
+++ b/source/site/sass/base/_typography.scss
@@ -1,4 +1,8 @@
 
+body, textarea {
+	font-family: SourceSans, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 h1 {
 	font-size: 48px;
 }
@@ -7,7 +11,15 @@ h2 {
 	font-size: 36px;
 }
 
-h1, h2, h3 {
+h3 {
+	font-size: 24px;
+}
+
+h4 {
+	font-size: 18px;
+}
+
+h1, h2, h3, h4 {
 	color: #333;
 	font-family: SourceCode, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 500;
@@ -25,4 +37,12 @@ p, a {
 
 strong {
 	font-weight: 400;
+}
+
+input {
+	font-size: 12px;
+}
+
+textarea {
+	font-size: 13px;
 }
