--- a/source/site/sass/layout/_slider.scss
+++ b/source/site/sass/layout/_slider.scss
@@ -1,3 +1,13 @@
 .slider {
 	clear: both;
+	display: block;
+	width: 100%;
+	float: left;
+}
+
+.slide {
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center center;
 }
