--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,9 @@ html
   body(class="#{ title.toLowerCase() }")
     block content
 
+    footer
+      p Raphaël Parent © 2016
+
     script(src='/site/javascripts/main.js')
 
 
