--- a/source/site/sass/components/_button.scss
+++ b/source/site/sass/components/_button.scss
@@ -1,3 +1,4 @@
+
 button, .button {
 	padding: 10px 40px;
 	margin-top: 30px;
@@ -7,4 +8,5 @@ button, .button {
 	border-radius: 2px;
 	border: none;
 	cursor: pointer;
+	margin-right: 15px;
 }
