--- a/source/site/sass/layout/_slider.scss
+++ b/source/site/sass/layout/_slider.scss
@@ -8,6 +8,14 @@
 .slide {
 	width: 100%;
 	height: 100%;
+	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
+}
+
+@media screen and (max-width: 720px) {
+	.slide
+	{
+		background-position: 40% 315px;
+	}
 }
