--- a/source/site/sass/main.scss
+++ b/source/site/sass/main.scss
@@ -34,3 +34,4 @@
 // PAGES
 //----------------------------------------------------------------------------------------------------
 @import "pages/home";
+@import "pages/single-project";
